--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
 body {
-    
+    text-align: center;
     background: url("https://coolbackgrounds.io/images/backgrounds/index/sea-edge-79ab30e2.png") no-repeat center fixed;
     background-size: cover;
 }
 h1 {
-    background-color: #aed6fc ;
+    align-self: center;
+    background-color: #97c6f3e7 ;
     color: mintcream;
     font-family: 'Major Mono Display', monospace;
-    max-width: fit-content;
+    /*max-width: fit-content;*/
 }
