--- a/style.css
+++ b/style.css
@@ -1,24 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark&display=swap');
+*{
+    font-family: 'Palanquin Dark', sans-serif;
+}
 body {
-    text-align: center;
+    margin-top: 10%;
     background: url("bg.png") no-repeat center fixed;
     background-size: cover;
 }
-h1 {
-
-    align-self: center;
-    background-color: #97c6f3e7 ;
-    color: mintcream;
-    font-family:  monospace;
+h1, h2{
+    color: rgb(0, 0, 0);
+    font-size: 40px;
+    font-weight: bold;
     /*max-width: fit-content;*/
+    text-align: center;
 }
-
 .links{
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 .links h3{
+    padding-top: 40px;
     margin-top: 0;
     margin-right: 20px;
 }
+.links h3:nth-last-of-type(1){
+    margin-right: 0;
+}
+
